[package]
name = "kilobase"
version = "17.4.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_kilobase"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["cshim","pg17"]
cshim = ["pgrx/cshim"]
pg15 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg_test = []

[dependencies]
thiserror = "2.0.12"
pgrx = { version = "=0.15.0", default-features = false }
jedi = { path = "../../../packages/rust/jedi" }
redis = { version = "0.27.3", features = ["tls-rustls"]}
reqwest = { version = "0.12", default-features = false, features = ["json", "blocking", "rustls-tls"] }
tokio = { version = "1.40", features = ["rt", "net"] }
serde = "1.0"
ulid = "1.1.3"
base62 = "2.0.2"

[dev-dependencies]
pgrx-tests = "=0.15.0"
