[package]
name = "kilobase"
version = "17.4.1"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_kilobase"
path = "./src/bin/pgrx_embed.rs"

[features]
default = ["pg17"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17" ]
pg18 = ["pgrx/pg18", "pgrx-tests/pg18" ]
pg_test = []

[dependencies]
thiserror = "2.0.12"
pgrx = { version = "=0.16.1", default-features = false }
serde = "1.0"

[dev-dependencies]
pgrx-tests = "=0.16.1"
