[package]
name = "behavior_statetree"
authors = ["kbve", "h0lybyte"]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
publish = false
description = "Hybrid Bevy ECS / JNI NPC AI planner for Fabric Minecraft — headless ECS manages entity state, behavior trees computed via systems, applied on server tick."

[lib]
crate-type = ["cdylib"]

[dependencies]
# JNI bridge — Rust ↔ JVM interop
jni = "0.21"

# Async runtime — hosts Bevy ECS tick loop
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# Bounded channels for message passing (JNI ↔ ECS)
crossbeam-channel = "0.5"

# Serialization for snapshot/intent DTOs
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Headless Bevy ECS — MinimalPlugins only, no rendering
bevy = { version = "0.18", default-features = false, features = [
    "bevy_state",
    "multi_threaded",
] }

# Creature components from the shared bevy_npc package
bevy_npc = { path = "../../../packages/rust/bevy/bevy_npc", features = ["creature"] }
