[package]
name = "behavior_statetree"
authors = ["kbve", "h0lybyte"]
version = "1.0.16"
edition = "2024"
rust-version.workspace = true
license = "MIT"
publish = false
description = "Hybrid Bevy ECS / JNI NPC AI planner for Fabric Minecraft — headless ECS manages entity state, behavior trees computed via systems, applied on server tick."

[lib]
crate-type = ["cdylib"]

[dependencies]
# JNI bridge — Rust ↔ JVM interop
jni = "0.21"

# Async runtime — hosts Bevy ECS tick loop
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }

# Bounded channels for message passing (JNI ↔ ECS)
crossbeam-channel = "0.5"

# Serialization for snapshot/intent DTOs
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Headless Bevy ECS — MinimalPlugins only, no rendering
bevy = { version = "0.19", default-features = false, features = [
    "bevy_state",
    "multi_threaded",
] }

# Creature components from the shared bevy_npc package
bevy_npc = { path = "../../../packages/rust/bevy/bevy_npc", features = ["creature"] }

# Flow field pathfinding — pure algorithms, no Bevy feature needed here
# (the grid/flow types are plain Rust structs wrapped as Bevy Resources
# inside our own ECS module).
bevy_pathfinder = { path = "../../../packages/rust/bevy/bevy_pathfinder" }

# Shared behavior tree engine — BehaviorNode trait, Selector/Sequence
# composites, cooldown system, observation traits. MC-specific nodes
# (archetype, flow field) stay local; the generic engine is shared.
bevy_behavior = { path = "../../../packages/rust/bevy/bevy_behavior" }

# Chat bridge — IRC client exposed via C-FFI so JNI can drive it
# (kbve_chat_connect / send / poll / disconnect). Pulls in the ffi
# feature which activates extern "C" entry points.
bevy_chat = { path = "../../../packages/rust/bevy/bevy_chat", features = ["ffi"] }

