[package]
name = "mc_auth"
authors = ["kbve", "h0lybyte"]
version = "0.1.0"
edition = "2024"
rust-version = "1.94"
license = "MIT"
publish = false
description = "Minecraft ↔ Supabase authentication bridge — JNI-hosted Tokio runtime that links Fabric players to Supabase accounts via REST calls and link codes."

[lib]
crate-type = ["cdylib"]

[dependencies]
# JNI bridge — Rust ↔ JVM interop
jni = "0.21"

# Async runtime — hosts the HTTP client + request pipeline
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time", "macros"] }

# Bounded channels for message passing (JNI ↔ async worker)
crossbeam-channel = "0.5"

# Serialization for auth DTOs + event payloads
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Logging
tracing = "0.1"

# Shared Supabase (PostgREST) client — lives in bevy_supa so future Bevy
# games (isometric, etc.) can import the same plugin + SupaClient shape
# without re-rolling the reqwest wrapper. mc_auth is JNI, not Bevy, so we
# opt out of the `bevy` feature and take only the native HTTP transport.
bevy_supa = { path = "../../../packages/rust/bevy/bevy_supa", default-features = false, features = [
    "native",
] }

# reqwest is pulled in transitively via bevy_supa's `native` feature —
# we re-use the same Response + HeaderMap types in supabase.rs for
# convenience without declaring a second dependency edge here.
reqwest = { version = "0.12", default-features = false, features = [
    "json",
    "rustls-tls",
] }

# Agones SDK — sends Ready/Health pings to the sidecar so the gameserver
# stays alive in the Agones Fleet. Without these pings the pod is recycled
# every ~5 minutes by Agones' health controller.
agones = "1.57"
