[package]
name = "reel"
authors = ["kbve", "h0lybyte"]
version = "0.1.0"
edition = "2021"
rust-version.workspace = true
publish = false

[lib]
name = "reel"
path = "src/lib.rs"

[[bin]]
name = "reel"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
thiserror = "2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum = { version = "0.8.5", features = ["macros", "json"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
librqbit = "8"

[dev-dependencies]
tempfile = "3"
http-body-util = "0.1"
tower = { version = "0.5", features = ["util"] }
serial_test = "3"
