[package]
name = "factorio-ctl"
authors = ["kbve", "h0lybyte"]
version = "0.0.1"
edition = "2021"
rust-version.workspace = true
publish = false
description = "REST API service for the Agones-managed Factorio server (status, saves, rotation)"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5.3", features = ["util", "timeout"] }
tower-http = { version = "0.7.0", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
http = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
utoipa = { version = "5", features = ["axum_extras"] }
kube = { version = "3", default-features = false, features = ["client", "rustls-tls"] }
k8s-openapi = { version = "0.27", features = ["v1_32"] }
jedi = { path = "../../../packages/rust/jedi", features = ["clickhouse"] }

[features]
default = []
