[package]
name = "firecracker-ctl"
authors = ["kbve", "h0lybyte"]
version = "0.1.24"
edition = "2021"
publish = false
description = "REST API service for managing Firecracker microVMs"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5.3", features = ["util", "timeout"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
dashmap = "6"

[features]
default = []
