[package]
name = "firecracker-ctl"
authors = ["kbve", "h0lybyte"]
version = "0.1.31"
edition = "2021"
publish = false
description = "REST API service for managing Firecracker microVMs"

[dependencies]
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.0", features = ["full", "rt-multi-thread", "process"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower = { version = "0.5.3", features = ["util", "timeout"] }
tower-http = { version = "0.6.8", features = ["trace", "cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
tokio-stream = "0.1"
dashmap = "6"
# Used by /fc/* persistent endpoint proxy (Phase 2d) to reverse-proxy
# into the VM on its TAP IP. No TLS needed — connections are plaintext
# over the internal /30 link inside the pod netns.
reqwest = { version = "0.12", default-features = false, features = ["stream"] }
# Used by fc_destroy to SIGTERM the VMM process via kill(2).
libc = "0.2"

[features]
default = []
