[package]
name = "arpg-server"
authors = ["kbve", "h0lybyte"]
version = "0.0.4"
edition = "2024"
license = "MIT"
description = "ARPG game server — axum + tokio host for the simgrid grid-authoritative bevy sim (Diablo-style isometric)."

[[bin]]
name = "arpg-server"
path = "src/main.rs"

[dependencies]
simgrid = { path = "../../../../packages/rust/simgrid" }
bevy_items = { path = "../../../../packages/rust/bevy/bevy_items" }
bevy_mapdb = { path = "../../../../packages/rust/bevy/bevy_mapdb" }
jedi = { path = "../../../../packages/rust/jedi", features = ["postgres", "valkey"] }
bevy = { version = "0.18", default-features = false, features = ["bevy_state"] }
axum = { version = "0.7", default-features = false, features = ["ws", "json", "http1", "tokio"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-trait = "0.1.88"
agones = "1.57"
serde_json = "1.0"
