[package]
name = "arpg-server"
authors = ["kbve", "h0lybyte"]
version = "0.1.27"
edition = "2024"
rust-version.workspace = true
license = "MIT"
description = "ARPG game server — axum + tokio host for the simgrid grid-authoritative bevy sim (Diablo-style isometric)."

[[bin]]
name = "arpg-server"
path = "src/main.rs"

[dependencies]
simgrid = { path = "../../../../packages/rust/simgrid" }
bevy_items = { path = "../../../../packages/rust/bevy/bevy_items" }
bevy_spells = { path = "../../../../packages/rust/bevy/bevy_spells" }
bevy_mapdb = { path = "../../../../packages/rust/bevy/bevy_mapdb" }
jedi = { path = "../../../../packages/rust/jedi", features = ["postgres", "valkey", "observ"] }
bevy = { version = "0.19", default-features = false, features = ["bevy_state"] }
axum = { version = "0.8.9", default-features = false, features = ["ws", "json", "http1", "tokio"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
async-trait = "0.1.88"
agones = "1.57"
serde_json = "1.0"
