[package]
name = "cryptothrone-server"
authors = ["kbve", "h0lybyte"]
version = "0.0.26"
edition = "2024"
rust-version.workspace = true
license = "MIT"
description = "CryptoThrone game server — axum + tokio host for the simgrid grid-authoritative bevy sim."

[[bin]]
name = "cryptothrone-server"
path = "src/main.rs"

[dependencies]
simgrid = { path = "../../../../packages/rust/simgrid" }
jedi = { path = "../../../../packages/rust/jedi", features = ["postgres", "valkey"] }
async-trait = "0.1.88"
bevy = { version = "0.19", default-features = false, features = ["bevy_state"] }
axum = { version = "0.8.9", default-features = false, features = ["ws", "json", "http1", "tokio"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "signal", "sync", "time", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
agones = "1.57"
