[package]
name = "agones-factorio-relay"
authors = ["kbve", "h0lybyte"]
version = "0.0.1"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0"
thiserror = "2"
tokio = { version = "1.0", features = [
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
    "sync",
    "time",
    "signal",
    "net",
] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
] }
